--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -8,8 +8,11 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 <div class="container">
-	<h2 class="title-page">Our Store</h2>
-
+	{% if 'search' in request.path %}
+		<h2 class="title-page">Search Results</h2>
+	{% else %}
+		<h2 class="title-page">Our Store</h2>
+	{% endif %}
 </div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
@@ -25,8 +28,8 @@
 	<article class="filter-group">
 		<header class="card-header">
 			<a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
-				<i class="icon-control fa fa-chevron-down"></i>
-				<h6 class="title">Categories</h6>
+				<i class="icon-control fa fa-chevron-down text-danger"></i>
+				<h6 class="title text-danger">Categories</h6>
 			</a>
 		</header>
 		<div class="filter-content collapse show" id="collapse_1" style="">
@@ -45,8 +48,8 @@
 	<article class="filter-group">
 		<header class="card-header">
 			<a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
-				<i class="icon-control fa fa-chevron-down"></i>
-				<h6 class="title">Sizes </h6>
+				<i class="icon-control fa fa-chevron-down text-danger"></i>
+				<h6 class="title text-danger">Sizes </h6>
 			</a>
 		</header>
 		<div class="filter-content collapse show" id="collapse_4" style="">
@@ -77,8 +80,8 @@
 	<article class="filter-group">
 		<header class="card-header">
 			<a href="#" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" class="">
-				<i class="icon-control fa fa-chevron-down"></i>
-				<h6 class="title">Price range </h6>
+				<i class="icon-control fa fa-chevron-down text-danger"></i>
+				<h6 class="title text-danger">Price range </h6>
 			</a>
 		</header>
 		<div class="filter-content collapse show" id="collapse_3" style="">
@@ -129,37 +132,57 @@
 </header><!-- sect-heading -->
 
 <div class="row">
-  {% for product in products %}
-	<div class="col-md-4">
-		<figure class="card card-product-grid">
-			<div class="img-wrap">
-				<a href="{{product.get_url}}"><img src="{{product.image.url}}"></a>
+	{% if products %}
+	  {% for product in products %}
+		<div class="col-md-4">
+			<figure class="card card-product-grid">
+				<div class="img-wrap">
+					<a href="{{product.get_url}}"><img src="{{product.image.url}}"></a>
 
 
-			</div> <!-- img-wrap.// -->
-			<figcaption class="info-wrap">
-				<div class="fix-height">
-					<a href="{{product.get_url}}" class="title">{{ product.product_name }}</a>
-					<div class="price-wrap mt-2">
-						<span class="price">${{ product.price }}</span>
-					</div> <!-- price-wrap.// -->
-				</div>
-				<a href="#" class="btn btn-block btn-danger">Add to cart </a>
-			</figcaption>
-		</figure>
-	</div> <!-- col.// -->
-  {% endfor %}
+				</div> <!-- img-wrap.// -->
+				<figcaption class="info-wrap">
+					<div class="fix-height">
+						<a href="{{product.get_url}}" class="title">{{ product.product_name }}</a>
+						<div class="price-wrap mt-2">
+							<span class="price">${{ product.price }}</span>
+						</div> <!-- price-wrap.// -->
+					</div>
+					<a href="{{ product.get_url }}" class="btn btn-block btn-danger">View Details </a>
+				</figcaption>
+			</figure>
+		</div> <!-- col.// -->
+	  {% endfor %}
+	{% else %}
+		<div class="">
+			<h2>Nothing Found.</h2>
+		</div>
+	{% endif %}
 </div> <!-- row end.// -->
 
 
 <nav class="mt-4" aria-label="Page navigation sample">
+	{% if products.has_other_pages %}
   <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+		{% if products.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+		{% else %}
+		<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+		{% endif %}
+		{% for i in products.paginator.page_range %}
+			{% if products.number == i %}
+				<li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+			{% else %}
+				<li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+			{% endif %}
+    {% endfor %}
+		{% if products.has_next %}
+    	<li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
+		{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+		{% endif %}
   </ul>
+	{% endif %}
 </nav>
 
 	</main> <!-- col.// -->
