--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -30,6 +30,8 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+    <script src="https://www.paypal.com/sdk/js?client-id=AXYnP5AFDLlnJV4lOTbPFKIFm7RNpnAxGio6jDSzOJKYX-0IXjiVWsD5Mw7ZgKNuztn5eZwCcS_QvqGM&currency=USD"></script>
+
 <style>
 .pagination > li > a
 {
