--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -63,6 +63,22 @@
     background-color: #d9534f !Important;
     border: solid 1px #d9534f;
 }
+
+.list-group > .active
+{
+    color: white;
+    background-color: #d9534f !Important;
+    border: solid 1px #d9534f !Important;
+}
+
+.list-group > .active
+{
+    background-color: #d9534f !Important;
+    border: solid 1px #d9534f;
+}
+
+
+
 </style>
 <script type="text/javascript">
 /// some script
