--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -9,7 +9,7 @@
 
 <title>LaalKurti | One of the Biggest Online Shopping Platform</title>
 
-<link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+<link src="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 <!-- jQuery -->
 <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
@@ -21,13 +21,13 @@
 <!-- <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>  -->
 
 <!-- Font awesome 5 -->
-<link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
+<link src="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- custom style -->
-<link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
-<link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
+<link src="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
+<link src="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
-<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+<link src="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
