--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -9,15 +9,15 @@
 
 <title>LaalKurti | One of the Biggest Online Shopping Platform</title>
 
-<link src="{% static '/images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+<link src="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 <!-- jQuery -->
-<script src="{% static '/js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
 
 <!-- Bootstrap4 files-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
-<script src="{% static '/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 <!-- <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>  -->
 
 <!-- Font awesome 5 -->
@@ -30,7 +30,7 @@
 <link src="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
 
 <!-- custom javascript -->
-<script src="{% static '/js/script.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
     <script src="https://www.paypal.com/sdk/js?client-id=AXYnP5AFDLlnJV4lOTbPFKIFm7RNpnAxGio6jDSzOJKYX-0IXjiVWsD5Mw7ZgKNuztn5eZwCcS_QvqGM&currency=USD"></script>
 
